# anthony-gpt

./: .gitignore  README.md  example_file.txt  example_file2.txt  few-shot.py  girls-names-large.csv  girls-names.csv  manual-nn.ipynb  minigpt.py  multi-head.ipynb  multi-head.py  notebook.ipynb  prep-data.ipynb  pull-model.sh  pyproject.toml  pytorch-nn.ipynb  runpod-server  send.sh  torch-idomatic.ipynb  transformer-word.ipynb  transformer.ipynb
gutenberg/: gutenberg_clean.py  process.ipynb
