[project]
name = "anthony-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "pandas>=3.0.2",
    "tiktoken>=0.12.0",
    "torch==2.6.0",
    "tensorboard",
    "tqdm",
    "setuptools<82",
    "transformers>=5.8.1",
    "accelerate>=1.13.0",
]
